# simple_web_search

./: .gitignore  Cargo.toml  README.md  profile.yaml  settings.yaml
src/: config.rs  main.rs  query.rs
