[package]
name = "simple_web_search"
version = "0.1.0"
authors = ["Yaxin Cheng <yaxin.cheng@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
percent-encoding = "2.1"
